--- a/style.css
+++ b/style.css
@@ -58,12 +58,40 @@ section .layers_container .item.layer_1 {
 }
 section .layers_container .item.layer_2 {
     transform: translateZ(60px) scale(.95);
+    display: flex;
+    flex-direction: column-reverse;
 }
-section .layers_container .item.layer_2 a {
+section .layers_container .item.layer_2 .box.chat{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    height: 60%;
+}
+section .layers_container .item.layer_2 .box.chat .chat-box{
+    display: flex;
+    width: 100%;
+    height: 24px;
+    margin-bottom: 20px;
+}
+section .layers_container .item.layer_2 .box.chat .chat-box .icon{
+   margin-right: 20px;
+    height: 100%;
+    width: 36px;
+   
+    background-size: cover;
+    background-position: center;
+}
+section .layers_container .item.layer_2 .box.chat a {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     font-size: calc(var(--index) * 1.125);
     color: var(--textColor);
     text-decoration: none;
 }
+
 section .layers_container .item.layer_3 {
     transform: translateZ(120px) scale(.88);
 }
