--- a/style.css
+++ b/style.css
@@ -66,21 +66,63 @@ section .layers_container .item.layer_2 .box.chat{
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    height: 60%;
+    max-height: 60%;
+    overflow: hidden;
+}
+section .layers_container .item.layer_2 .box.chat .chat-log {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    margin-top: auto; 
 }
 section .layers_container .item.layer_2 .box.chat .chat-box{
     display: flex;
+    align-items: center;
     width: 100%;
-    height: 24px;
-    margin-bottom: 20px;
+    height: calc(var(--index) * 1.35);
+    margin: calc(var(--index) * .5625 ) 0px;
+}
+section .layers_container .item.layer_2 .box.chat .chat-box.user {
+   display: flex;
+   justify-content:  end;
+}
+section .layers_container .item.layer_2 .box.chat .chat-box.bot {
+    display: flex;
+    justify-content: start;
+}
+section .layers_container .item.layer_2 .box.chat .chat-box .sender{
+    /* display: flex; */
+    justify-content: center;
+    --border-size: calc(var(--index) * .1);
+    padding: calc(var(--index) * .25) calc(var(--index) * .75);
+    border-radius: .5rem;
+
+}
+section .layers_container .item.layer_2 .box.chat .chat-box.user .sender{
+    
+    order: 1;
+    border: var(--border-size) solid var(--color);
+    background-color: transparent;
+
+}
+section .layers_container .item.layer_2 .box.chat .chat-box.bot .sender{
+    border: var(--border-size) solid var(--color);
+    background-color:transparent;
+    /* backdrop-filter: blur(20px);  */
+    /* color: black; */
 }
 section .layers_container .item.layer_2 .box.chat .chat-box .icon{
-   margin-right: 20px;
     height: 100%;
-    width: 36px;
-   
+    width: calc(var(--index) * 1.35);
     background-size: cover;
     background-position: center;
+}
+section .layers_container .item.layer_2 .box.chat .chat-box.user .icon{
+    order: 2;
+    margin-left: calc(var(--index) * .525);
+}
+section .layers_container .item.layer_2 .box.chat .chat-box.bot .icon{
+    margin-right: calc(var(--index) * .525);
 }
 section .layers_container .item.layer_2 .box.chat a {
     position: absolute;
@@ -104,10 +146,6 @@ section .layers_container .item.layer_5 {
 section .layers_container .item.layer_6 {
     transform: translateZ(300px);
 }
-/* .layer_3, .layer_4, .layer_5, .layer_6{
-    pointer-events: none;
-} */
-
 
 /* ==============================================================================================> */
 .chat {
@@ -125,13 +163,17 @@ section .layers_container .item.layer_6 {
     justify-content: space-between;
 }
 .chat .header {
+    --border-size: calc(var(--index) * .1);
     display: flex;
     align-items: center;
     justify-content: center;
-    border-bottom: 1px solid var(--color);
+    border-bottom: var(--border-size) solid var(--color);
     border-end-end-radius: 10rem;
     border-end-start-radius: 10rem;
-    border-color: var(--backgroundColor);
+    box-shadow: -.5rem -.5rem 1rem rgba(0, 0, 0, .35),       
+                 .5rem  .5rem 1rem rgba(255, 255, 255, .1),
+          inset -.5rem -.5rem 1rem rgba(0, 0, 0, .35),
+          inset  .5rem  .5rem 1rem rgba(255, 255, 255, .1);
     backdrop-filter: blur(20px);
 }
 .chat .header h3{
@@ -141,38 +183,19 @@ section .layers_container .item.layer_6 {
     letter-spacing: calc(var(--index) * .3);
     line-height: 1.5;
 }
-/* .chat .header h3::after{
-    content: "";
-    position: absolute;
-    bottom: -1px;
-    left: 0px;
-    width: 100%;
-    height: 2px;
-    background: rgb(255, 255, 255, .5);
-    border-radius: calc(var(--index) * .5);
-    transform-origin: right;
-    transform: scaleX(0);
-    transition: transform .5s;
-}
-.chat .header h3:hover:after{
-    border-bottom:none;
-    transform-origin: left;
-    transform: scaleX(1);
-} */
 
 .chat .box.input {
     --border-size: calc(var(--index) * .1);
     display: flex;
+    padding: calc(var(--index) * .55) calc(var(--index) * 1.35);
     background-color: transparent;
     border-top:  var(--border-size) solid var(--color);
-    border-start-start-radius: 10rem;
-    border-start-end-radius: 10rem;
+    border-top-left-radius: 2rem;
+    border-top-right-radius: 2rem;
     box-shadow: -.5rem -.5rem 1rem rgba(255, 255, 255, .1),       
                  .5rem  .5rem 1rem rgba(0, 0, 0, .35),
           inset -.5rem -.5rem 1rem rgba(255, 255, 255, .1),
           inset  .5rem  .5rem 1rem rgba(0, 0, 0, .35);
-
-    /* border-color: var(--backgroundColor); */
     backdrop-filter: blur(20px);
 }
 .chat .box.input .icon.close {
@@ -195,39 +218,65 @@ section .layers_container .item.layer_6 {
     stroke-width: 10px;
     fill: none;
 }
-.chat .box.input input{
+.chat .box.input textarea{
+    display: flex;
+    flex: 20;
+    height: calc(var(--index) * 1.15);                 
+    margin-right: calc(var(--index) * .5);
     background: transparent;
-    border: none;
-    outline: none;
-    flex: 9;
-    font-size: calc(var(--index) * 1.05);
+    
+    text-align: center;
+    color: var(--textColor);
+    font-size: calc(var(--index) * .95);
     font-weight: 400;
     font-family: merriweather-italic-3d;
-    letter-spacing: calc(var(--index) * .125) ;
-    color: var(--textColor);
-    text-align: center;
+    letter-spacing: calc(var(--index) * .125);
+    
+    border: none;
+    outline: none;
+    overflow: hidden;
+    resize: none;
 }
-.chat .box.input input::placeholder{
+.chat .box.input textarea::placeholder{
     text-align: center;
 } 
 .chat .box.input button{
-    margin: 0 16px;
+    display: flex;
+    align-items: center;
+    height: 100%;
     background-color: transparent;
     border: none;
-    line-height: .5;
     transition: all .5s linear;
+   
 }
-.chat .box.input button .icon.send svg {
+.chat .box.input button .icon{
+    margin-top: auto;
+}
+.chat .box.input button .icon.send {
+    display: block;
+}
+.chat .box.input button .icon.spiner {
+    display: none;
+    animation: animateSpinner 1.25s linear infinite;
+}
+
+@keyframes animateSpinner {
+    0%   {transform: rotate(0deg)}
+    100% {transform: rotate(360deg)}
+}
+
+.chat .box.input button .icon svg {
     display: flex;
     justify-content: center;
-    height: 80%;
-    width: auto;
+    height: calc(var(--index) * 1.05);
 }
-.chat .box.input button .icon.send svg path{
+.chat .box.input button .icon svg path{
     stroke: var(--textColor);
     stroke-width: .5px;
-    fill: none;
+    fill:#737373;
 }
+
+
 .chat .box.input button:hover .icon.send svg path{
     stroke-width: .5px;
     fill: var(--textColor);
